{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 396,
  "lineage": "33dfb5cd-4060-32be-6016-3e422c5f22d5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982534358571:vpc/vpc-0a643ef1ad1561a15",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0838cd5c4ee76ec70",
            "default_route_table_id": "rtb-043bae26cf06ccf51",
            "default_security_group_id": "sg-0d3cc48e7c1740787",
            "dhcp_options_id": "dopt-040a0feeefcf6ff89",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a643ef1ad1561a15",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-043bae26cf06ccf51",
            "owner_id": "982534358571"
          }
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "custom_public_ip_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05d18aa6ed56a900c",
            "arn": "arn:aws:ec2:us-east-1:982534358571:elastic-ip/eipalloc-05d18aa6ed56a900c",
            "association_id": "eipassoc-0818c7bb17cd71aad",
            "domain": "vpc",
            "id": "eipalloc-05d18aa6ed56a900c",
            "instance": "i-023d08fabaeb1dd1f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-041902fed9485bae2",
            "private_dns": "ip-10-0-1-4.ec2.internal",
            "private_ip": "10.0.1.4",
            "public_dns": "ec2-100-29-124-218.compute-1.amazonaws.com",
            "public_ip": "100.29.124.218",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.EC2.aws_instance.custom_public_ec2",
            "module.EC2.aws_key_pair.custom_public_instance_key",
            "module.EC2.aws_network_interface.custom_ani",
            "module.EC2.aws_security_group.custom_sg",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_subnet.public_subnet_2",
            "module.network.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "custom_public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-084568db4383264d4",
            "arn": "arn:aws:ec2:us-east-1:982534358571:instance/i-023d08fabaeb1dd1f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-023d08fabaeb1dd1f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "custom-public-instance-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-041902fed9485bae2"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-041902fed9485bae2",
            "private_dns": "ip-10-0-1-4.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c416af4ef5b8ebae",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0528bf5f9bf4ec619",
            "tags": {
              "Name": "custom_public_ec2"
            },
            "tags_all": {
              "Name": "custom_public_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e0ffb2cad7924f52"
            ]
          },
          "dependencies": [
            "module.EC2.aws_key_pair.custom_public_instance_key",
            "module.EC2.aws_network_interface.custom_ani",
            "module.EC2.aws_security_group.custom_sg",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_subnet.public_subnet_2",
            "module.network.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "custom_ani",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982534358571:network-interface/eni-041902fed9485bae2",
            "id": "eni-041902fed9485bae2",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:5a:6d:ab:5b:23",
            "owner_id": "982534358571",
            "private_ip": "10.0.1.4",
            "private_ip_list": [
              "10.0.1.4"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.4"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0e0ffb2cad7924f52"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0528bf5f9bf4ec619",
            "tags": {
              "Name": "custom-ani"
            },
            "tags_all": {
              "Name": "custom-ani"
            }
          },
          "dependencies": [
            "module.EC2.aws_security_group.custom_sg",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_subnet.public_subnet_2",
            "module.network.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "custom_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982534358571:security-group/sg-0e0ffb2cad7924f52",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0ffb2cad7924f52",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "custom-sg",
            "name_prefix": "",
            "owner_id": "982534358571",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-081c15254a5c0b153"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "custom_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:982534358571:loadbalancer/app/custom-alb/892e6fc3400204e5",
            "arn_suffix": "app/custom-alb/892e6fc3400204e5",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "custom-alb-461081687.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:982534358571:loadbalancer/app/custom-alb/892e6fc3400204e5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "custom-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e0ffb2cad7924f52"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0528bf5f9bf4ec619"
              },
              {
                "subnet_id": "subnet-08434e539a0b82f4f"
              }
            ],
            "subnets": [
              "subnet-0528bf5f9bf4ec619",
              "subnet-08434e539a0b82f4f"
            ],
            "tags": {
              "Environment": "custom-alb"
            },
            "tags_all": {
              "Environment": "custom-alb"
            },
            "vpc_id": "vpc-081c15254a5c0b153",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.EC2.aws_security_group.custom_sg",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_subnet.public_subnet_2",
            "module.network.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "custom_alb_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:982534358571:listener/app/custom-alb/892e6fc3400204e5/1baffa01e17c372d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:982534358571:targetgroup/custom-tg/d26436553cc3ca83",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:982534358571:listener/app/custom-alb/892e6fc3400204e5/1baffa01e17c372d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:982534358571:loadbalancer/app/custom-alb/892e6fc3400204e5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EC2.aws_security_group.custom_sg",
            "module.alb.aws_lb.custom_alb",
            "module.alb.aws_lb_target_group.custom_tg",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_subnet.public_subnet_2",
            "module.network.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "custom_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:982534358571:targetgroup/custom-tg/d26436553cc3ca83",
            "arn_suffix": "targetgroup/custom-tg/d26436553cc3ca83",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "5000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:982534358571:targetgroup/custom-tg/d26436553cc3ca83",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "custom-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-081c15254a5c0b153"
          },
          "dependencies": [
            "module.network.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec2_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:982534358571:targetgroup/custom-tg/d26436553cc3ca83-20250418121509731200000004",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:982534358571:targetgroup/custom-tg/d26436553cc3ca83",
            "target_id": "i-023d08fabaeb1dd1f"
          },
          "dependencies": [
            "module.EC2.aws_instance.custom_public_ec2",
            "module.EC2.aws_key_pair.custom_public_instance_key",
            "module.EC2.aws_network_interface.custom_ani",
            "module.EC2.aws_security_group.custom_sg",
            "module.alb.aws_lb_target_group.custom_tg",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_subnet.public_subnet_2",
            "module.network.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "custom_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982534358571:internet-gateway/igw-01c99479a8652000a",
            "id": "igw-01c99479a8652000a",
            "owner_id": "982534358571",
            "tags": {
              "Name": "custom-igw"
            },
            "tags_all": {
              "Name": "custom-igw"
            },
            "vpc_id": "vpc-081c15254a5c0b153"
          },
          "dependencies": [
            "module.network.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "custom_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982534358571:route-table/rtb-01d55a0dad29db2dc",
            "id": "rtb-01d55a0dad29db2dc",
            "owner_id": "982534358571",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c99479a8652000a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "custom-route-table"
            },
            "tags_all": {
              "Name": "custom-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-081c15254a5c0b153"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.custom_igw",
            "module.network.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "custom_route_table_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e84dc5e4e8765c3",
            "route_table_id": "rtb-01d55a0dad29db2dc",
            "subnet_id": "subnet-0528bf5f9bf4ec619"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.custom_igw",
            "module.network.aws_route_table.custom_route_table",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "custom_route_table_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0363f226b2f09aeb6",
            "route_table_id": "rtb-01d55a0dad29db2dc",
            "subnet_id": "subnet-08434e539a0b82f4f"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.custom_igw",
            "module.network.aws_route_table.custom_route_table",
            "module.network.aws_subnet.public_subnet_2",
            "module.network.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982534358571:subnet/subnet-058adca5152b94a89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058adca5152b94a89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982534358571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "custom-private-subnet"
            },
            "tags_all": {
              "Name": "custom-private-subnet"
            },
            "vpc_id": "vpc-081c15254a5c0b153"
          },
          "dependencies": [
            "module.network.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982534358571:subnet/subnet-0528bf5f9bf4ec619",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0528bf5f9bf4ec619",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982534358571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "custom-public-subnet_1"
            },
            "tags_all": {
              "Name": "custom-public-subnet_1"
            },
            "vpc_id": "vpc-081c15254a5c0b153"
          },
          "dependencies": [
            "module.network.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982534358571:subnet/subnet-08434e539a0b82f4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08434e539a0b82f4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982534358571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "custom-public-subnet_2"
            },
            "tags_all": {
              "Name": "custom-public-subnet_2"
            },
            "vpc_id": "vpc-081c15254a5c0b153"
          },
          "dependencies": [
            "module.network.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:982534358571:vpc/vpc-081c15254a5c0b153",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02d45467c1e901755",
            "default_route_table_id": "rtb-0dbfd06cdef4dae96",
            "default_security_group_id": "sg-0fcedb45c3ac44db8",
            "dhcp_options_id": "dopt-040a0feeefcf6ff89",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-081c15254a5c0b153",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dbfd06cdef4dae96",
            "owner_id": "982534358571",
            "tags": {
              "Name": "custom-vpc"
            },
            "tags_all": {
              "Name": "custom-vpc"
            }
          }
        }
      ]
    }
  ]
}